@@ -1394,6 +1394,19 @@ NEARDATA struct permonst mons[] = {
 	  M1_CARNIVORE|M1_ACID,
 	M2_HOSTILE|M2_STRONG|M2_NASTY|M2_GREEDY|M2_JEWELS|M2_MAGIC,
 	0, CLR_YELLOW),
+    MON("chromatic dragon", S_DRAGON,
+	LVL(16, 10, 0, 25, 0), (G_NOGEN|1),
+	A(ATTK(AT_BREA, AD_RBRE, 6, 8), ATTK(AT_BITE, AD_PHYS, 4, 8),
+	  ATTK(AT_CLAW, AD_PHYS, 2, 8), ATTK(AT_BITE, AD_PHYS, 4, 8),
+	  NO_ATTK, NO_ATTK),
+	SIZ(WT_DRAGON, 1600, 0, MS_ROAR, MZ_GIGANTIC),
+	MR_FIRE|MR_COLD|MR_SLEEP|MR_DISINT|MR_ELEC|MR_POISON|MR_ACID|MR_STONE,
+	MR_FIRE|MR_COLD|MR_SLEEP|MR_DISINT|MR_ELEC|MR_POISON|MR_ACID|MR_STONE,
+	M1_FLY|M1_THICK_HIDE|M1_NOHANDS|M1_CARNIVORE|M1_SEE_INVIS|
+	  M1_OVIPAROUS,
+	M2_NOPOLY|M2_HOSTILE|M2_STALK|M2_STRONG|M2_NASTY|
+	  M2_GREEDY|M2_JEWELS|M2_MAGIC,
+	0, CLR_MAGENTA),
 /*
  * Elementals
  */
@@ -3302,8 +3315,8 @@ struct permonst _mons2[] = {
 	/* Multi-headed, possessing the breath attacks of all the other dragons
 	 * (selected at random when attacking).
 	 */
-    MON("Chromatic Dragon", S_DRAGON,
-	LVL(16, 12, 0, 30, -14), (G_NOGEN|G_UNIQ),
+    MON("Tiamat", S_DRAGON,
+	LVL(17, 12, 0, 30, -14), (G_NOGEN|G_UNIQ),
 	A(ATTK(AT_BREA, AD_RBRE, 6, 8), ATTK(AT_MAGC, AD_SPEL, 0, 0),
 	  ATTK(AT_CLAW, AD_SAMU, 2, 8), ATTK(AT_BITE, AD_PHYS, 4, 8),
 	  ATTK(AT_BITE, AD_PHYS, 4, 8), ATTK(AT_STNG, AD_PHYS, 1, 6)),
@@ -3311,7 +3324,7 @@ struct permonst _mons2[] = {
 	MR_FIRE|MR_COLD|MR_SLEEP|MR_DISINT|MR_ELEC|MR_POISON|MR_ACID|MR_STONE,
 	MR_FIRE|MR_COLD|MR_SLEEP|MR_DISINT|MR_ELEC|MR_POISON|MR_STONE,
 	M1_THICK_HIDE|M1_NOHANDS|M1_CARNIVORE|M1_SEE_INVIS|M1_POIS,
-	M2_NOPOLY|M2_HOSTILE|M2_FEMALE|M2_STALK|M2_STRONG|M2_NASTY|
+	M2_NOPOLY|M2_PNAME|M2_HOSTILE|M2_FEMALE|M2_STALK|M2_STRONG|M2_NASTY|
 	  M2_GREEDY|M2_JEWELS|M2_MAGIC,
 	M3_WANTSARTI|M3_WAITFORU|M3_INFRAVISIBLE, HI_LORD),
 #if 0	/* OBSOLETE */
